# EcoPyLot

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
EcoPyLot/: JSONToDataFrameConverter.py
dev/investigation/: investigation_xarray.py
dev/other/: Input data_bus.xlsx  export params to json.ipynb
dev/performance/: carculator_vs_ecopylot.py  performance_inout.py
docs/: bibliography.bib  conf.py  environment.yaml  index.md
docs/_templates/: footer.html
docs/content/: data-ingestion.md  structure.md  theory.md
ecopylot/: configuration.toml  excel_to_json.py  import.py  inout.py  statistics.py  stats.py  test.ipynb  test.py  utils.py
tests/: test_JSONToDataFrameConverter.py  test_dataloader.py
